results/acr-val-only/applicable_patch/sympy__sympy-15011_2024-04-05_06-08-19/run_test_suite_1.log
Output:
============================= test process starts ==============================
executable:         /home/haifeng/miniconda3/envs/setup_sympy__sympy__1.2/bin/python  (3.9.19-final-0) [CPython]
architecture:       64-bit
cache:              no
ground types:       python 
numpy:              None
random seed:        57382054
hash randomization: on (PYTHONHASHSEED=4279087586)

sympy/utilities/tests/test_lambdify.py[84] 
test_no_args ok
test_single_arg ok
test_list_args ok
test_nested_args ok
test_str_args ok
test_own_namespace_1 ok
test_own_namespace_2 ok
test_own_module ok
test_bad_args ok
test_atoms ok
test_sympy_lambda ok
test_math_lambda ok
test_mpmath_lambda ok
test_number_precision ok
test_mpmath_precision ok
test_math_transl ok
test_mpmath_transl ok
test_numpy_transl numpy not installed. s
test_tensorflow_transl tensorflow not installed s
test_numpy_translation_abs numpy not installed. s
test_numexpr_printer numexpr not installed. s
test_issue_9334 numexpr not installed. s
test_exponentiation ok
test_sqrt ok
test_trig ok
test_vector_simple ok
test_vector_discontinuous ok
test_trig_symbolic ok
test_trig_float ok
test_docs ok
test_math ok
test_sin ok
test_matrix ok
test_numpy_matrix numpy not installed. s
test_numpy_transpose numpy not installed. s
test_numpy_dotproduct numpy not installed s
test_numpy_inverse numpy not installed. s
test_numpy_old_matrix numpy not installed. s
test_python_div_zero_issue_11306 numpy not installed. s
test_issue9474 ok
test_issue_9871 numexpr not installed. s
test_numpy_piecewise numpy not installed. s
test_numpy_logical_ops numpy not installed. s
test_numpy_matmul numpy not installed. s
test_numpy_numexpr numpy not installed. s
test_numexpr_userfunctions numpy not installed. s
test_tensorflow_basic_math tensorflow not installed. s
test_tensorflow_placeholders tensorflow not installed. s
test_tensorflow_variables tensorflow not installed. s
test_tensorflow_logical_operations tensorflow not installed. s
test_tensorflow_piecewise tensorflow not installed. s
test_tensorflow_multi_max tensorflow not installed. s
test_tensorflow_multi_min tensorflow not installed. s
test_tensorflow_relational tensorflow not installed. s
test_integral ok
test_sym_single_arg ok
test_sym_list_args ok
test_sym_integral ok
test_namespace_order ok
test_namespace_type ok
test_imps ok
test_imps_errors ok
test_imps_wrong_args ok
test_lambdify_imps ok
test_dummification ok
test_curly_matrix_symbol E
test_python_keywords ok
test_lambdify_docstring ok
test_special_printers ok
test_true_false ok
test_issue_2790 ok
test_issue_12092 ok
test_ITE ok
test_Min_Max ok
test_Indexed numpy not installed s
test_issue_12173 ok
test_issue_13642 numpy not installed s
test_sinc_mpmath ok
test_lambdify_dummy_arg ok
test_lambdify_mixed_symbol_dummy_args ok
test_numpy_array_arg numpy not installed s
test_tensorflow_array_arg tensorflow not installed. s
test_lambdify_inspect ok
test_issue_14941 ok                                                       [FAIL]


________________________________________________________________________________
_______ sympy/utilities/tests/test_lambdify.py:test_curly_matrix_symbol ________
Traceback (most recent call last):
  File "/home/haifeng/projects/reverse-prompt/SWE-bench/testbed/sympy__sympy/setup_sympy__sympy__1.2/sympy/utilities/tests/test_lambdify.py", line 734, in test_curly_matrix_symbol
    lam = lambdify(curlyv, curlyv)
  File "/home/haifeng/projects/reverse-prompt/SWE-bench/testbed/sympy__sympy/setup_sympy__sympy__1.2/sympy/utilities/lambdify.py", line 476, in lambdify
    c = compile(funcstr, filename, 'exec')
  File "<lambdifygenerated-77>", line 1
    def _lambdifygenerated({v}):
                           ^
SyntaxError: invalid syntax

===== tests finished: 54 passed, 29 skipped, 1 exceptions, in 0.87 seconds =====
DO *NOT* COMMIT!

>>>>> All Tests Passed
